ta to barxhamxnAyxsa sent to 10 proof

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1816,24 +1816,17 @@ parivataRnegaLige atiVta, avaneV nija (satayx), shAshavxta.}}
 \end{entry}
 
 \begin{entry}
-\word{parxNavagaLanAda\-gaLu}
+\word{parxNavanAda}
 \src{va}
-\meaning{\arthanonum{shariVradalilxruva navacakarxgaLige saMbaMdhisi\-daMte, dhAyxnasathxnAda shivayoVgige keVLibaruva oMbatutx bageya parxNavanAda\-gaLu:}
+\meaning{\arthanonum{shariVradalilxruva navacakarxgaLige saMbaMdhisi\-daMte, dhAyxnasathxnAda shivayoVgige keVLibaruva heNuNxduMbiyanAda, veVNunAda, GaMTAnAda, BeVrinAda, meVGanAda, parxNavanAda, kiMkiNinAda, agaNitanAda, divayxnAda eMba oMbatutx bageya parxNavanAda\-gaLu:}
 \ullekha{I parxNavaMgaLa nAdaMgaLAvAveMdaDe: peNudxMbinAda, veVNunAda, GaMTAnAda, BeVrinAda, meVGanAda, parxNavanAda, kiMkiNinAda, agaNitanAda, divayxnAda (savasaM. 3; cenanxba. 1268-441).}}
 \end{entry}
 
 \begin{entry}
 \word{parxNavadaAkaqtigaLu}
 \src{va}
-\meaning{\arthanonum{parxNavaveMdare, OM namaH shivAya eMba Aru akaSxrada
- maMtarxvAgidadxrU, A maMtarxvu shabadx athavA akaSxragaLiMda
- racitavAgidadxrU, kelavu vacanakAraru shAkatxranunx anukarisi A
- akaSxragaLige AkAragaLive eMdu heVLutAtxre. parxtha\-mAkaSxravu OM
- tAraka savxrUpa uLuLxdu, divxtiVyAkaSxravu daMDakAkaqti uLuLxdu,
- mUraneyadu kuMDalAkAravAgide, nAlakxneyadu adhaRcaMdArxkAravAgide,
- aidaneyadakekx dapaRNA\-kaqti ide matutx Araneyadakekx joyxVtiya
- AkAravide (va.pa.koV. 252):} \ullekha{inunx parxNavada lakaSxNavadeMteMdaDe: parxthama tAraka savxrUpavAgihudu. divxtiVya daMDasavxrUpavAgihudu. taqtiVya kuMDalAkAravAgihudu. catuthaR adhaRcaMdarxkAkAravAgihudu. paMcama dapaRNAkAravAgihudu. SaSaThx joyxVtisavxrUpavAgihudu noVDA. idakekx IshavxroVvAca: ``parxthamaM tArakA\-rUpaM| divxtiVyaM daMDa ucayxteV| taqtiVyaM kuMDalAkAraM| catuthaR cAdhaRcaMdarxkaM|| paMcamaM dapaRNAkAraM| SaSaThx joyxVtisavxrUpakaM| iti parxNava vijecnxVyaM| yadogxVpayxM varAnaneV||" iMteMdudAgi, aparxmANakUDalasaMgamadeVvA (savasaM. 13; bAlasaM. 501-252);
-matatxM, A shiSayxnu ele sadugxrusAvxmi, aKaMDajoyxVtimaRyavAgiha paramoVMkAra utapxtayxvanu nimamx mahAvAkayxdiMda nirUpisi, nimamx sAvxnuBAvadaqkikxniMda toVralu kaMDu suKiyAdenu. inunx SaDivxdha BUtaMgaLutapxtayx nAyxsasathxlavanu nirUpiseMdu binenxYsalu, A sadugxrusAvxmi nirUpisidaradeMteMdaDe: aKaMDajoyxVtimaRyavAgiha paramoVMkAra parxNavada joyxVtisavxrUpadalilx AtamxnutapxtayxvAdanu. A parxNavada dapaRNAkAradalilx AkAsha utapxtayxvAyitutx. A parxNavada adhaRcaMdArxkAdalilx vAyu utapxtayxvAyitutx. A parxNavada kuMDalAkAradalilx teVja utapxtayxvAyitutx. A parxNavada daMDakasavxrUpadalilx apupx utapxtayxvAyitutx. A parxNavada tArakasavxrUpadalilx paqthivx utapxtayxvAyitutx noVDA. idakekx citapxrXkAshAgameV: ``OMkAra joyxVtirUpeV ca| AtAmx ceYva samudaBxvaH| OMkAra dapaRNAkAreV| AkAshaM ca samudaBxvaM|| OMkAreV cAdhaRcaMderxV ca| vAyushecxYva samudaBxvaH| OMkAra kuMDalAkAreV| teVjashecxYva samudaBxvaM|| OMkAra daMDarUpeV ca| ApashecxYva samudaBxvaH| OMkAra tArakarUpeV| paqthivxshacx samudaBxvaH| iti SaSaThxBUtaM deVviV| sAthxna sAthxneV samudaBxma||" iMteMdudAgi, aparxmANakUDalasaMgamadeVvA (savasaM. 13; bAlasaM. 502-253); A aKaMDa joyxVtimaRya\-vAgiha paramoVMkAraparxNavada tArakAsavxrUpadalilx paqthivxyeMba mahA\-BUtavihudu. A parxNavada daMDasavxrUpadalilx apupxveMba mahABUtavihudu. A parxNavada kuMDalAkAradalilx teVjaveMba mahABUtavihudu. A parxNavada adhaRcaMdarxkadalilx vAyuveMba mahABUtavihudu. A parxNavada dapaRNAkAradalilx AkAshaveMba mahABUtavihudu. A parxNavada joyxVtisavxrUpadalilx AtamxneMba mahABUtavihudu noVDA. idakekx citipxMDAgameV: ``OMkAra tArakarUpeV| paqthivxBUtaM samAcareVtf| OMkAra daMDarUpeV ca| apupx BUta samAshirxtAH|| OMkAra kuMDalAkAreV| teVja\-BUtaH tathABaveVtf| OMkAra adhaRcaMderxV ca| vAyuBUtaM ca vataRteV|| OMkAra dapaRNAkAreV| voyxVmaBUtaM sadAshirxtAH| OMkAra joyxVtirUpeV ca| AtamxBUtAshirxtaM tathA| iti SaSaThxBUtaM deVviV| sAthxna sAthxneV samAcareVtf||" iMteMdudAgi. aparxmANakUDalasaMgamadeVvA (savasaM. 13; bAlasaM. 503-254); matatxM, A shiSayxnu ele sadugxrusAvxmi, SaDivxdhaBUtaMgaLutapxtayx nAyxsasathxlavanu nimamx mahAnuBAvavacanadiMda nirUpisi, nimamx mahAnuBAvadaqkikxniMda toVralu, kaMDu paramasuKiyAdenu. inunx BakatxmAheVshavxra parxsAdi pArxNaliMgi sharaNa aikayxrutapxtayx nAyxsa sathxlavanu nirUpiseMdu binenxYsalu, A sadugxrusAvxmi nirUpisidaradeMteMdaDe: aKaMDa joyxVtimaRyavAgiha paramoVMkAra parxNavada joyxVtisavxrUpadalilx aikayxnutapxtayxvAdanu. A parxNavada dapaRNAkAradalilx sharaNanutapxtayxvAdanu. A parxNavada adhaRcaMdarxkadalilx pArxNaliMgi utapxtayxvAdanu. A parxNavada kuMDalAkAradalilx parxsAdi utapxtayxvAdanu. A parxNavada daMDakasavxrUpadalilx maheVshavxra utapxtayxvAdanu. A parxNavada tArakasavxrUpadalilx BakatxnutapxtayxvAdanu noVDA. idakekx citapxrXkAshAgamoVtatxrasAreV: ``OMkAra joyxVtirUpeV ca| aikayxMtu samu\-daBxvaM| OMkAra dapaRNAkAreV| sharaNashacx samudaBxvaM|| OMkAreVcAdhaRcaMderxV ca| pArxNaliMgiV samudaBxvaM|| OMkAra kuMDalAkAreV| parxsAdiVshacx samudaBxvaM|| OMkAra daMDakarUpeV ca| mAheVshavxra samudaBxvaH| OMkAra tArakA\-rUpeV| BakatxshecxYva samudaBxvaH| iti SaDusathxlaM deVviV| sAthxnasAthxneVSu jAyateV|| iMteMdudAgi, aparxmANakUDalasaMgamadeVvA (\hbox{savasaM.} 13; bAlasaM. 504-254).}}
+\meaning{\artha{parxNavaveMdare, OM namaH shivAya eMba Aru akaSxrada maMtarx I maMtarxda akaSxragaLu karxmavAgi tAraka, daMDaka, kuMDala, adhaRcaMdarx, dapaRNa, joyxVti-ya AkAravuLaLxvugaLAgive:} \ullekha{inunx parxNavada lakaSxNavadeMteMdaDe: parxthama tAraka savxrUpavAgihudu. divxtiVya daMDasavxrUpavAgihudu. taqtiVya kuMDalAkAravAgihudu. catuthaR adhaRcaMdarxkAkAravAgihudu. paMcama dapaRNAkAravAgihudu. SaSaThx joyxVtisavxrUpavAgihudu noVDA. idakekx IshavxroVvAca: ``parxthamaM tArakA\-rUpaM| divxtiVyaM daMDa ucayxteV| taqtiVyaM kuMDalAkAraM| catuthaR cAdhaRcaMdarxkaM|| paMcamaM dapaRNAkAraM| SaSaThx joyxVtisavxrUpakaM| iti parxNava vijecnxVyaM| yadogxVpayxM varAnaneV||" iMteMdudAgi, aparxmANakUDalasaMgamadeVvA (savasaM. 13; bAlasaM. 501-252).} \artha{paqthivx, apupx(jala), teVjasusx, vAyu, AkAsha, AtamxgaLu karxmavAgi parxNavada tAraka, daMDaka, kuMDala, adhaRcaMdarx, dapaRNa, joyxVti savxrUpagaLalilx nelesive:}
+\ullekha{matatxM, A shiSayxnu ele sadugxrusAvxmi, aKaMDajoyxVtimaRyavAgiha paramoVMkAra utapxtayxvanu nimamx mahAvAkayxdiMda nirUpisi, nimamx sAvxnuBAvadaqkikxniMda toVralu kaMDu suKiyAdenu. inunx SaDivxdha BUtaMgaLutapxtayx nAyxsasathxlavanu nirUpiseMdu binenxYsalu, A sadugxrusAvxmi nirUpisidaradeMteMdaDe: aKaMDajoyxVtimaRyavAgiha paramoVMkAra parxNavada joyxVtisavxrUpadalilx AtamxnutapxtayxvAdanu. A parxNavada dapaRNAkAradalilx AkAsha utapxtayxvAyitutx. A parxNavada adhaRcaMdArxkAdalilx vAyu utapxtayxvAyitutx. A parxNavada kuMDalAkAradalilx teVja utapxtayxvAyitutx. A parxNavada daMDakasavxrUpadalilx apupx utapxtayxvAyitutx. A parxNavada tArakasavxrUpadalilx paqthivx utapxtayxvAyitutx noVDA. idakekx citapxrXkAshAgameV: ``OMkAra joyxVtirUpeV ca| AtAmx ceYva samudaBxvaH| OMkAra dapaRNAkAreV| AkAshaM ca samudaBxvaM|| OMkAreV cAdhaRcaMderxV ca| vAyushecxYva samudaBxvaH| OMkAra kuMDalAkAreV| teVjashecxYva samudaBxvaM|| OMkAra daMDarUpeV ca| ApashecxYva samudaBxvaH| OMkAra tArakarUpeV| paqthivxshacx samudaBxvaH| iti SaSaThxBUtaM deVviV| sAthxna sAthxneV samudaBxma||" iMteMdudAgi, aparxmANakUDalasaMgamadeVvA (savasaM. 13; bAlasaM. 502-253); A aKaMDa joyxVtimaRya\-vAgiha paramoVMkAraparxNavada tArakAsavxrUpadalilx paqthivxyeMba mahA\-BUtavihudu. A parxNavada daMDasavxrUpadalilx apupxveMba mahABUtavihudu. A parxNavada kuMDalAkAradalilx teVjaveMba mahABUtavihudu. A parxNavada adhaRcaMdarxkadalilx vAyuveMba mahABUtavihudu. A parxNavada dapaRNAkAradalilx AkAshaveMba mahABUtavihudu. A parxNavada joyxVtisavxrUpadalilx AtamxneMba mahABUtavihudu noVDA. idakekx citipxMDAgameV: ``OMkAra tArakarUpeV| paqthivxBUtaM samAcareVtf| OMkAra daMDarUpeV ca| apupx BUta samAshirxtAH|| OMkAra kuMDalAkAreV| teVja\-BUtaH tathABaveVtf| OMkAra adhaRcaMderxV ca| vAyuBUtaM ca vataRteV|| OMkAra dapaRNAkAreV| voyxVmaBUtaM sadAshirxtAH| OMkAra joyxVtirUpeV ca| AtamxBUtAshirxtaM tathA| iti SaSaThxBUtaM deVviV| sAthxna sAthxneV samAcareVtf||" iMteMdudAgi. aparxmANakUDalasaMgamadeVvA (savasaM. 13; bAlasaM. 503-254).} \artha{Bakatx, maheVshavxra, parxsAdi, pArxNaliMgi, sharaNa, aikayx - ivarugaLu tAraka, daMDaka, kuMDala, adhaRcaMdarx, dapaRNa, joyxVti savxrUpagaLiMda karxmavAgi udaBxvisidaru:} \ullekha{matatxM, A shiSayxnu ele sadugxrusAvxmi, SaDivxdhaBUtaMgaLutapxtayx nAyxsasathxlavanu nimamx mahAnuBAvavacanadiMda nirUpisi, nimamx mahAnuBAvadaqkikxniMda toVralu, kaMDu paramasuKiyAdenu. inunx BakatxmAheVshavxra parxsAdi pArxNaliMgi sharaNa aikayxrutapxtayx nAyxsa sathxlavanu nirUpiseMdu binenxYsalu, A sadugxrusAvxmi nirUpisidaradeMteMdaDe: aKaMDa joyxVtimaRyavAgiha paramoVMkAra parxNavada joyxVtisavxrUpadalilx aikayxnutapxtayxvAdanu. A parxNavada dapaRNAkAradalilx sharaNanutapxtayxvAdanu. A parxNavada adhaRcaMdarxkadalilx pArxNaliMgi utapxtayxvAdanu. A parxNavada kuMDalAkAradalilx parxsAdi utapxtayxvAdanu. A parxNavada daMDakasavxrUpadalilx maheVshavxra utapxtayxvAdanu. A parxNavada tArakasavxrUpadalilx BakatxnutapxtayxvAdanu noVDA. idakekx citapxrXkAshAgamoVtatxrasAreV: ``OMkAra joyxVtirUpeV ca| aikayxMtu samu\-daBxvaM| OMkAra dapaRNAkAreV| sharaNashacx samudaBxvaM|| OMkAreVcAdhaRcaMderxV ca| pArxNaliMgiV samudaBxvaM|| OMkAra kuMDalAkAreV| parxsAdiVshacx samudaBxvaM|| OMkAra daMDakarUpeV ca| mAheVshavxra samudaBxvaH| OMkAra tArakA\-rUpeV| BakatxshecxYva samudaBxvaH| iti SaDusathxlaM deVviV| sAthxnasAthxneVSu jAyateV|| iMteMdudAgi, aparxmANakUDalasaMgamadeVvA (\hbox{savasaM.} 13; bAlasaM. 504-254).}}
 \end{entry}
 
 \begin{entry}
@@ -1848,7 +1841,7 @@ matatxM, A shiSayxnu ele sadugxrusAvxmi, aKaMDajoyxVtimaRyavAgiha paramoVMkAra u
  saqSiTxyAgabeVkAdarU kelavu badalAvaNegaLAgaleVbeVku, yAva
  badalAvaNeyAgabeVkAdarU vasutxgaLalilx sapxMdanavAgaleVbeVku, yAva
  sapxMdanavAgabeVkAdarU shabadx uMTAgaleVbeVku. A shabadx atayxMta
- sUkaSxmXvAgidudx adu namamx kivige keVLisadirabahudu. aMtU
+ sUkaSxmXvAgidudx adu kivige keVLisadirabahudu. aMtU
  parashivanalilx uMTAda saqSiTxsabeVkeMba iceCxyiMda horaTa
  parxNamavu aMtha oMdu modala sapxMdana:}
 \ullekha{niHkala shivatatatxvXdalilx \hbox{jAcnxna} citutx udayavAyitutx. A cititxniMda akAra ukAra makAragaLeMba akaSxra\-tarxyaMgaLAdavu, akAraveV nAda, ukAraveV biMdu, makAraveV kaLe. iMtiV tirxvidhakekx tAyi citutx. iMtiV nAlukx oMdA\-dalilx OMkAraveMba parxNavadutapxtitxyAyitutx (savasaM. 11; toVMTasi. 33-14).}}
@@ -1871,7 +1864,7 @@ matatxM, A shiSayxnu ele sadugxrusAvxmi, aKaMDajoyxVtimaRyavAgiha paramoVMkAra u
  suKa tanagalalx, parashivanige eMdu tiLiyutAtxne. hiVge tavxkukx,
  sapxshaRna, sapxshaRnada suKa \hbox{mUranUnx} parxsAdaliMgakekx apiRsida
  sharaNanu parxsAdaliMgada parxsananxtege ahaRvAgutAtxne hAgU A
- mUlaka, tavxgiMdirxyada duSapxrXBAvagaLiMda mukatxnAgutAtxne (va.pa.koV. 258).}}
+ mUlaka, tavxgiMdirxyada duSapxrXBAvagaLiMda mukatxnAgutAtxne.}}
 \newmeaning{\ni{parxsAda liMgasayx parxsananxtavxM - parxsAdaliMgada parxsananxtavxM}}
 \end{entry}
 
@@ -1902,14 +1895,10 @@ parashivanigAgi eMdu tiLidu mADutAtxne:} \ullekha{parxsAdave aMgavAdavana iravu 
 \begin{entry}
 \word{parxsAdiya aginxyaMga}
 \src{va}
-\meaning{\arthanonum{nABisAthxnadalilxruva maNi\-pUraka\-veMba cakarxdalilx athavA adaralilxruva aginxtatatxvXdalilx athavA icACxshakitxyalilx shivaliMga irutatxde. idanunx sAkASxtakxrisikoLuLxva sAdhakanige parxsAdi eMba hesaridudx, adanunx
-sAkASxtakxrisikoLaLxlu aginxtatatxvXda athavA icACxshakitxy
-duSapxriNAmagaLanunx kaDime mADabeVkAgutatxde. hiVge shudadhxvAda
-icACxshakitxge avadhAna Bakitx eMdu hesaru.}}
+\meaning{\arthanonum{nABisAthxnadalilxruva maNi\-pUraka\-veMba cakarxdalilx athavA adaralilxruva aginxtatatxvXdalilx athavA icACxshakitxyalilx shivaliMga irutatxde. idanunx sAkASxtakxrisikoLuLxva sAdhakanige parxsAdi eMba hesaridudx, adanunx sAkASxtakxrisikoLaLxlu aginxtatatxvXda athavA icACxshakitxy duSapxriNAmagaLanunx kaDime mADabeVkAgutatxde. hiVge shudadhxvAda icACxshakitxge avadhAna Bakitx eMdu hesaru.}}
 \newmeaning{\arthanonum{\qquad icACxshakitxya (aginxya) duSapxriNAmagaLanunx kaDime mADuvudeMdare, vividha haMtagaLalilx apaRNeya athaRvanUnx
  higigxsuvudu. modalu AhAravanunx parxsAdavanAnxgi mADikoMDu
- seVvisutAtxne. anaMtara, nAvu noVDuva noVTa, mUsuva gaMdha, saviyuva ruci elalxvanUnx parashivaneV namage koTiTxruvudariMda avugaLanunx
-avanige apiRsi anaMtara nAvu anuBavisabeVku eMdu tiLiyutAtxne. iDiV
+ seVvisutAtxne. anaMtara, noVDuva noVTa, mUsuva gaMdha, saviyuva ruci elalxvanUnx parashivaneV koTiTxruvudariMda avugaLanunx avanige apiRsi anaMtara anuBavisabeVku eMdu tiLiyutAtxne. iDiV
 parxpaMcaveV parashivana oMdu parxsAda eMdu tiLiyuvudu
 parxsAdisathxlada oMdu parxmuKa guNa. inUnx muMde hoVgi, avanu tananx \hbox{deVha},
 kameRVMdirxya, jAcnxneVMdirxya, aMtaHkaraNagaLelalxvanUnx apiRsi
@@ -1951,7 +1940,7 @@ bisilU oMde beLadiMgaLU oMdeV aMtha parxsAdiya aMgavu parxsidadhx\-parxsAdiya aM
  namamx hosa janamxvanunx nidhaRrisutatxde. Aga nAvu hosa hosa
  koVTalege oLagAgutetxVve. Adare liMgAMgasAmarasayxvanunx I
  janamxdalelxV sAdhisidare, \hbox{muMdina} janamxvU iruvudilalx, nAvu
- parxLayakUkx oLagAguvudilalx (8: 446):} \ullekha{ayAyx, nAvu guru liMga jaMgamada pAdoVdaka parxsAdasaMbaMdhigaLeMdu nuDiya koMba pAtakara muKava noVDalAgadu. adeVkeMdaDe, pAdoVdakava koMDa baLika, jananada beVra kitotxrasabeVku. parxsAdava koMDa baLike, parxLayava geliyabeVku. (savasaM. 8; maDimA. 465-179).}}
+ parxLayakUkx oLagAguvudilalx:} \ullekha{ayAyx, nAvu guru liMga jaMgamada pAdoVdaka parxsAdasaMbaMdhigaLeMdu nuDiya koMba pAtakara muKava noVDalAgadu. adeVkeMdaDe, pAdoVdakava koMDa baLika, jananada beVra kitotxrasabeVku. parxsAdava koMDa baLike, parxLayava geliyabeVku. (savasaM. 8; maDimA. 465-179).}}
 \end{entry}
 
 \begin{entry}
@@ -1974,6 +1963,29 @@ bisilU oMde beLadiMgaLU oMdeV aMtha parxsAdiya aMgavu parxsidadhx\-parxsAdiya aM
 \src{va}
 \meaning{\arthanonum{parxtiyobabx mAnavana aMta\-raMgadalilx aMtasathxvAgiruva citakxleyanunx pArxNaliMgavanunx hasatxmasatxka\-saMyoVgada mUlaka horakekx taMdu iSaTxliMgadalilx pArxNaparxtiSeThx mADuvudu:}
 \ullekha{shirxVgurunAthanu mahA\-saMtoVSa huTiTx A shivakaLAtamxMge pUvaRda jaDasheYvamAgaRva \hbox{biDisi} nijaviVrasheYvadiVkeSxyaneV itutx hasatxmasatxka saMyoVgava mADi aMtaraMgadalilxruva pArxNaliMgava bahiSakxrisi, karasathxlakekx taMdu koTaTxnu (savasaM. 3; cenanxba. 935-298).}}
+\end{entry}
+
+\begin{entry}
+\word{pArxNaliMgiya pavanavaMga}
+\src{va}
+\meaning{\arthanonum{haqdayasAthxnadalilxruva anAhatacakarxdalilx athavA
+ adaralilxruva vAyutatatxvXdalilx (athavA Adishakitxyalilx) shivanu
+ jaMgamaliMga rUpadalilxrutAtxne. jaMgamaliMgavanunx
+ sAkASxtakxrisikoLuLxva sAdhakanige pArxNaliMgi eMba hesaridudx
+ adanunx sAkASxtakxrisikoLaLxlu tananxlilx\-ruva vAyu (pavana) tatatxvXda
+athavA Adishakitxya duSapxriNAmagaLanunx kaDime mADuva mUlaka adanunx
+shudadhxmADabeVkAgutatxde; hiVge shudadhxvAda Adishakitxge anuBAva
+Bakitx eMdu hesaru.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad pArxNaliMgiyeMdare Adishakitxya vividha rUpagaLAda hatutx
+ vAyugaLanunx niyaMtirxsuvavanu eMdAdudariMda, A niyaMtarxNada mUlaka
+ anuBAvavananx sAdhisikoLuLxtAtxne. I anuBAvada mUlaka sAdhakanu,
+ pArxNavu heVge deVhada parxti kaNadalilxyU ideyoV hAge liMgavu
+ (parashivanU) parxti kaNadalilxyU ide eMba jAcnxnavanunx
+ paDeyutAtxne. \hbox{pArxNaveV} liMga, liMgaveV pArxNa eMbudu keVvala
+ naMbikeyalalx, adu avana savxMta anuBavakekx baMda satayx. aMdare
+ avanu sididhxsikoMDa jaMgamaliMgakekx avana pArxNaveV (vAyuveV) aMga:}
+\ullekha{BakatxMge paqthivxyaMgavAgi, maheVshavxraMge apupxvaMgavAgi, parxsAdige aginxyaMgavAgi, pArxNaliMgige pavana\-saMgavAgi,... paMcatatatxvXkUDi oMdaralilx eyudxvalilx, SaDusathxla rUpAyitutx (savasaM. 8; moVLimA. 1972-638).}}
 \end{entry}
 
 \begin{entry}
@@ -2004,7 +2016,7 @@ bisilU oMde beLadiMgaLU oMdeV aMtha parxsAdiya aMgavu parxsidadhx\-parxsAdiya aM
 \end{entry}
 
 \begin{entry}
-\word{bahiraMgadashudidhx}
+\word{bahiraMgashudidhx}
 \src{va}
 \meaning{\arthanonum{tale boVLisikoLuLxvudu, gaqhasathxna veVSaBUSaNagaLanunx tayxjisuvudu, sAnxna mADuvudu, itAyxdi\-gaLelalx bahiraMga shudidhx. aMtaraMga shudidhxyilalxdeyeV mADida bahiraMga shudidhxge dhAmiRka mahatavxvilalx. neYtika AcaraNeyeV nija\-vAda aMtaraMga shudidhx:}
 \ullekha{kaLabeVDa, kolabeVDa, husiya nuDiyalu beVDa, muniyabeVDa, anayxrige asahayxpaDabeVDa, tananx baNiNxsabeVDa, idira haLiyalubeVDa, ideV aMtaraMga shudidhx, ideV bahiraMga shudidhx (savasaM. 1; basava. 235-59).}}
@@ -2013,7 +2025,7 @@ bisilU oMde beLadiMgaLU oMdeV aMtha parxsAdiya aMgavu parxsidadhx\-parxsAdiya aM
 \begin{entry}
 \word{bahiraMgadaSaTxmada}
 \src{kA}
-\meaning{\arthanonum{bahiraMgakekx saMbaMdhisidaMtiruva eMTu bageya gavaR\-gaLu:}
+\meaning{\arthanonum{bahiraMgakekx saMbaMdhisidaMtiruva kula Cala dhana rUpa ywvana videyx rAjayx tapasusx eMba eMTu bageya gavaR\-gaLu:}
 \ullekha{kula Cala dhana rUpu ywvana videyx rAjayx tapa iMtivu bahiraMgadaSaTxmadaM\-gaLu (karaNa. 667-11).}}
 \end{entry}
 
