ya to La, 8 new entries are sent to 11th proof

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -2718,6 +2718,13 @@ parxteyxVkisikoLaLxlAra. avaneV samayxgfjAcnxni (va.pa.koV. 355):}
 \end{entry}
 
 \begin{entry}
+\word{shurxtidaqSaTx anumAna}
+\meaning{\arthanonum{shabadx, parxtayxkaSx matutx anumAnagaLeMba mUru parxmANagaLu. baravaNige ilalxdidadx kAladalilx janaru veVdavanunx keVLuvikeyiMda (shurxti) tiLidukoLuLxtitxdadxru. hiVge keVLuvikeya mUlaka paDeda I jAcnxnavu shurxti enisikoMDitu. adanunx paDeyuva mAgaRvu shabadxvanunx keVLisikoLuLxva (shurxta) mAgaRvAdudariMda adakekx shabadxparxmANa eMba hesaru baMditu.}}
+\newmeaning{\arthanonum{\qquad parxtayxkaSxveMdare akaSxdiMda (kaNiNxniMda) noVDuvudu \hbox{eMdathaR}. vAsatxvavAgi yAvudAdarU iMdirxyadiMda paDeda jAcnxnakUkx idu anavxyisutatxde.}}
+\newmeaning{\ni{shurxtAyx daqSaTxM - shurxtidaqSaTxM; shurxtidaqSaTxM ca tatf anumAnaM ca - shurxtidaqSATxnumAnaM}}
+\end{entry}
+
+\begin{entry}
 \word{SaTasxthXlagaLige nUroMdu sathxlagaLa saMbaMdha}
 \src{koV}
 \meaning{\arthanonum{japagaLa mUlaka uMTAguva SaTasxthXlagaLu matutx nUroMdu sathxlagaLa saMbaMdha:}
