--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -9983,6 +9983,21 @@ AbarxhamxraMdharxmaqjutAM niVteVyamamaqtaparxdA |
 \end{entry}
 
 \begin{entry}
+\word{AdhAravajiRtAdiVkeSx}
+\src{saM}
+\meaning{\arthanonum{sAdhAra, AdhAravajiRtA (nirA\-dhAra) eMba eraDu vidhada diVkeSxgaLalilx oMdu. AcAyaRnilalxde IshavxraniMda vijAcnxnAkala matutx parxLayAkala eMba jiVvaru\-gaLige tiVvarxshakitxnipAtadiMda anugarxhisuva diVkeSx:}}
+\smallskip
+\begin{shl}
+seVyaM diVkASx divxdhA BinAnx sAdhArAdhAravajiRtA |\\[1pt]
+AcAyaRmaMtareVNeYva kirxyateV shaMkareVNa yA ||\\[1pt]
+vijAcnxnAkalanAmanxshacx parxlayAkalanasayx ca |\\[1pt]
+tiVvarxshakitxnipAteVna diVkASx sAdhAravajiRtA ||
+\end{shl}
+\medskip
+\pauthor{(kirx. sA., BA-3, 15. 2-3; shi. ta. ra., 9. 7. 6-7)}
+\end{entry}
+
+\begin{entry}
 \word{AdhArashakitx}
 \src{va}
 \meaning{\arthanonum{elalx vasutxgaLa mUlavAda cicaCxkitx. AdhAracakarxda nAlukx daLada kamalada madhayxdalilx iSATxthaRvanunx niVDuva suvaNaRda kAMtiyuLaLx shakitx. shivana iceCxyiMdalalxde AdhArashakitxyu saqSiTx, sithxti muMtAda vikAsakAyaRdalilx toDaga\-lAraLu:}
