--- a/tex-for-print/jss-282-501.tex
+++ b/tex-for-print/jss-282-501.tex
@@ -20258,7 +20258,7 @@ viVrasheYva dhamaRda sidAdhxMtagaLanunx biTuTx uLida sidAdhxMtagaLanunx avalaMbi
 \word{pUvaRmiVmAMsA}
 \meaning{\arthanonum{veVdagaLa kamaRkAMDakekx hecucx pArxshasatxyXkoTuTx, adaralilx
  asatayxvAdudu, anAvashayxkavAdudu EnU ilalxveMdu vAda parxtivAdagaLa
- mUlaka parxtipAdisuva guriyaninxTuTxkoMDiruva dashaRna. pUvaRmiVmAMsakaru yAva veYdika kamaRgaLanunx mADuvAga yAva maMtarxgaLanunx paThisabeVku, yAva yajacnxdiMda yAva Pala laBisutatxde muMtAduvugaLanunx sapxSaTxvAgi parxtipAdisidAdxre. Adare veVdagaLanunx iSuTx parxbalavAgi parxtipAdisuva pUvaRmiVmAMsakaru niriVshavxravAdigaLenunxvudu AshacxyaR\-karavAdarU satayxsaMgati.}}
+ mUlaka parxtipAdisuva guriyaninxTuTxkoMDiruva dashaRna. pUvaRmiVmAMsakaru yAva veYdika kamaRgaLanunx mADuvAga yAva maMtarxgaLanunx paThisabeVku, yAva yajacnxdiMda yAva Pala laBisutatxde muMtAduvugaLanunx sapxSaTxvAgi parxtipAdisidAdxre. Adare veVdagaLanunx iSuTx parxbalavAgi parxtipAdisuva pUvaRmiVmAMsakaru niriVshavxravAdigaLenunxvudu AshacxyaR\-karavAdarU satayxsaMgati.} \ullekha{pUvaRmiVmAMseyu veVdavAkayx vicArapUvaRkamAgi joyxVtiSoTxVmAdi yAga parxmuKa vidhAnakarxmavaM nivaRhisuvudariMda kamaRkAMDamenipudu (viveVka. 9).}}
 %\smallskip
 %\newmeaning{\arthanonum{\qquad pArxyashaH yAMtirxka riVtiya kamaR, yajacnxyAgAdi\-gaLu oLagoLuLxva pArxNibali, niriVshavxravAda muMtAdavu\-gaLu shara\-Nara niluvige viroVdhavAdudariMda, avaru pUvaR\-miVmAMsA dashaRnavanunx KaMDisidAdxre.}}
 \end{entry}
@@ -20600,6 +20600,11 @@ savaRjacnxH perxVrakaH shaMBuH... |
 \end{entry}
 
 \begin{entry}
+\word{peYtaqka}
+\meaning{\arthanonum{pitaqgaLige mADuva shArxdadhx; tithi:} \ullekha{beVgadiM peYtaqkage kaSxNisalapxriya BakatxnAgi baMdacaRneya keYkoMDu nijamukatxnAge cititxVsapuraverasi keYlAsakekx samAveVdiya noyadxnf (rAGaca. 4-70).}}
+\end{entry}
+
+\begin{entry}
 \word{peYtAmahadhamaR}
 \src{saM}
 \meaning{\arthanonum{pitAmahanige saMbaMdhisida dhamaR. pitAmaha eMdare barxhamx. barxhamxniMda nirUpitavAda vaNARsharxma vayxvasAthxrUpa dhamaR. shivasaMsAkxravilalxdavarige barxhamxniMda parxtipAditavAda dhamaR:}}
@@ -20798,6 +20803,11 @@ puruSatatatxvXrUpa BUtaH
 \newmeaning{\ni{badadx - badadxH - baMdhf + katx}}
 \end{entry}
 %pUvaRvanaLidu... hAgalalxde hiMdaNa tUtinavareMdu badudxda mADi... (savasaM. 7; nagemA. 1235-392);
+
+\begin{entry}
+\word{badadhxka}
+\meaning{\arthanonum{baMdhanakekx silukidavanu:} A jaMgama heNaNx beVDidare saMsAri eMdu, honanx beVDidare ashakaneMdu, maNuNx beVDidare badadhxkaneMdu iSaTxkekx noMda matetx BakitxvAsige hoVrabeVke (moVLimA. 53-204).}
+\end{entry}
 
 \begin{entry}
 \word{badadhxkatana}
@@ -21251,6 +21261,7 @@ daqshayxteV tacaCxriVreV{\char'263}simxnf tasAmxdf barxhamxpuraM ca tatf ||
 
 \begin{entry}
 \word{barxhamxpuri}
+\meaning{\arthanonum{barxhamxloVkadalilxya barxhamxna nivAsasathxla:} \ullekha{A swMdayaR ... I deVhavanunx pApadeVhavanAnxgisade `barxhamxpuri'yanAnxgisutatxde (swMdasa. 115).}}
 \end{entry}
 
 \begin{entry}
@@ -22492,6 +22503,11 @@ imAni dasha cihAnxni BaketxVrukAtxni shUlinA ||
 pUje, itAyxdi salilxsabeVku, tananx devxYtaBAva hoVgutatxde. avanu elalxvanUnx apiRsidaMte tananx BakitxBAvavanUnx apiRsutAtxne:}
 \ullekha{BakatxnAyitetx BakitxdAsoVha, yukatxnAyitetx yukitxdAsoVha, aikayxnAyitetx mamakAra dAsoVha, savaRdale dAsoVhaveV beVku (savasaM. 1; basava. 936-247); saMje hoVma neVma \hbox{nitayx} aSaTxvidhAcaRne SoVDashoVpacAra iMtiV varxta BAva \hbox{Bakitxya} mADidaralalxde, BakitxdAsoVhavanariyade keTaTxru (savasaM. 8; maDimA. 608-227).}}
 \newmeaning{\ni{BaketxVH dAsoVhaH - BakitxdAsoVhaH}}
+\end{entry}
+
+\begin{entry}
+\word{BakitxBaMDAra}
+\meaning{\arthanonum{atayxdhikavAda Bakitx:} \ullekha{niratishayavAda Bakitx; saMgana sharaNara Bakitx BaMDAravu enageMtu sAdhayxvapupxdu heVLenanx taMde (savasaM. 1; basava. 187-304)}}
 \end{entry}
 
 \begin{entry}
@@ -27320,6 +27336,12 @@ kAleVSu SaTfsu pUjoyxV{\char'263}haM tirxsaMdhayxmathavA punaH ||
 \ullekha{pApi, cAMDAla, anAcAri eMdu \hbox{dUSisi} oLahorageMdu bo\-gaLuva mULamAnavarige mahAMtina AcaraNe elilxyado (savasaM. 6; aMbiga. 235-76); ahudahudu, mahAMtina mana elalxrigelilxyado? (savasaM. 8; moVLige. 1489-500); iMtapapx mahAMtina atiVta Gana\-mahA\-jaMgamada shirxV pAdava toVrisi badukisayAyx enanx aKaMDeVshavxrA (savasaM. 14; SaNumxKa. 867-395).}}
 \end{entry}
 %maraNada neleyanaridAtana mahAMtinolagaNa hiriyaneMbe... (savasaM. 9; guruva-(vacanasaMcaya));
+
+\begin{entry}
+\word{mahAMtu}
+\src{va}
+\meaning{\arthanonum{atayxMta sherxVSaThxvAdudu:} \ullekha{nAdabiMdukaLAtiVtavAda paravasutxve mahAMtu noVDA shurxtitatigasAdhayxvAda paravasutxve mahAMtu noVDA (aKaMDe. 300-76).}}
+\end{entry}
 
 \begin{entry}
 \word{mahAkAshasathxla}
