work in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -2074,7 +2074,7 @@ Bakitx eMdu hesaru.}}
 \begin{entry}
 \word{biMdumayasakAra}
 \src{va}
-\meaning{\arthanonum{paravanunx saMkeVtisuva oMdu akaSxra:} \ullekha{kaniRkeya pUvaRdakiSxNapashicxmoVtatxraMgaLalilx vayxsatxvAda catudaRLA\-kaSxraMgaLoLage modal pUvaRdaLada biMdumayasakArakekx AdhAraveMdu shakitxyeMdu kAyaRveMdu paraveMdu biMduveMdeYdu payARyanAmaMgaLf (savasaM. 11; imamxDi. 1312-604).}}
+\meaning{\arthanonum{paravanunx saMkeVtisuva oMdu akaSxra:} \ullekha{kaNiRkeya pUvaRdakiSxNapashicxmoVtatxraMgaLalilx vayxsatxvAda catudaRLA\-kaSxraMgaLoLage modal pUvaRdaLada biMdumayasakArakekx AdhAraveMdu shakitxyeMdu kAyaRveMdu paraveMdu biMduveMdeYdu payARyanAmaMgaLf (savasaM. 11; imamxDi. 1312-604).}}
 \newmeaning{\ni{biMdu mayashacx asw kArashacx - biMdumayasakAraH}}
 \end{entry}
 
@@ -2091,7 +2091,7 @@ tAnalalx, tAnu shivana AvAsasAthxna eMda\-rita sharaNana BAvavu becucxbeVrilalxd
 \begin{entry}
 \word{beLipxnasuKa}
 \src{va}
-\meaning{\arthanonum{anuBAviyu turiVyAvasethxyalilx kANuva atayxMta parxkAshamAnavAda iMdirxyAtiVta beLakeV beLupx. \hbox{adanunx} kANuvAga avanige AnaMdavU Agutatxde:}
+\meaning{\arthanonum{anuBAviyu turiVyAvasethxyalilx kANuva atayxMta parxkAshamAnavAda iMdirxyAtiVta beLakeV beLupx. \hbox{adanunx} kANuvAga avanige uMTAguva AnaMda:}
 \ullekha{biLiyagiri taLaveLagAgi beLeye anuviDidu suKava kaMDu anuBavadavaLige \hbox{beLipxna} suKavaneVkiVkarisi noVDalu anuvAyitatxyAyx beLipxna hadinAresaLa piVTha (savasaM. 4; sidadhxrA. 828-233).}}
 \end{entry}
 
@@ -2105,9 +2105,9 @@ tAnalalx, tAnu shivana AvAsasAthxna eMda\-rita sharaNana BAvavu becucxbeVrilalxd
 \begin{entry}
 \word{BakatxMge paqthivxyaMga}
 \src{va}
-\meaning{\arthanonum{viVrasheYva sidAdhxMtadaMte deVhada benunxhuri, kutitxge, BUrxmadhayx matutx netitxyalilx parashiva nelesutAtxne. mUlAdhAradalilxruva shivanige AcAraliMgaveMdu hesaru. shivanu citfsavxrUpanAdudariMda, avanu nelesalu athavA vayxkatxvAgalu oMdu mAdhayxma beVku. kirxyAshakitxyeV A mAdhayxma. kirxyAshakitx paqthivxV BUtada matotxMdu hesaru. adara adhideVvate AcAraliMga.}}
+\meaning{\arthanonum{viVrasheYva sidAdhxMtadaMte deVhada benunxhuri, kutitxge, BUrxmadhayx matutx netitxyalilx parashiva nelesirutAtxne. mUlAdhAradalilxruva shivanige AcAraliMgaveMdu hesaru. shivanu citfsavxrUpanAdudariMda, avanu nelesalu athavA vayxkatxvAgalu oMdu mAdhayxma beVku. kirxyAshakitxyeV A mAdhayxma. kirxyAshakitx paqthivxV BUtada matotxMdu hesaru. adara adhideVvate AcAraliMga.}}
 \smallskip
-\newmeaning{\arthanonum{\qquad AcAraliMgavanunx sAdhisuva sAdhakanige BakatxneMdu hesaru. AcAraliMgavu namamxlilxyeV idadxrU \hbox{adanunx} sAdhisalu Bakatxnu kirxyAshakitxya duSapxriNAmagaLanunx nivArisi shudadhxvAda kirxyAshakitxyeV sharxdAdhxBakitx mADabeVkAgutatxde.}}
+\newmeaning{\arthanonum{\qquad AcAraliMgavanunx pUjisuva sAdhakanige BakatxneMdu hesaru. AcAraliMgavanunx parxkaTagoLuLxvaMte mADalu Bakatxnu kirxyAshakitxya duSapxriNAmagaLanunx nivArisi shudadhxvAda kirxyAshakitxyeV sharxdAdhxBakitx mADabeVkAgutatxde.}}
 \smallskip
 \newmeaning{\arthanonum{\qquad hasivu, niVraDike, shoVka, moVha, mupupx matutx
 maraNa eMba SaDUmiR\-gaLu paqthivx tatatxvXda
@@ -2142,7 +2142,7 @@ vacanakAraru vividha sAdhanagaLanunx sUcisidAdxre.}}
 \end{entry}
 
 \begin{entry}
-\word{BavabiVjada nele}
+\word{BavabiVjadanele}
 \src{va}
 \meaning{\arthanonum{punajaRnamxkekx agatayxvAda kamaR\-gaLu, saMsAra avugaLa nele:}
 \ullekha{Bavavirahita kAyaRvaneYdhi, Bava\-biVjada neleyanAsharxyisidaDe Bava tapapxdu noVDA, kapila sidadhxmalilxkAjuRnA (savasaM. 4; sidadhxrA. 1707-484).}}
@@ -2163,6 +2163,14 @@ padAthaR\-gaLu \hbox{eMbudu} modalaneya BAva; jAcnxtaq (tAnu) eMbudu eraDaneya B
 \end{entry}
 
 \begin{entry}
+\word{BAva, viBAva, niBARva}
+\src{va}
+\meaning{\arthanonum{BAvaveMba AdhAyxtimxka \hbox{budidhx} baliSaThxvAdAga, sAdhakanu iSaTxliMgaveV parashiva eMdu tiLiyutAtxne,  baliSaThxvAgade idAdxga iSaTxliMga keVvala kalilxnaMte kANutatxde idu viBAva; Adare budidhx tananxnunx tAnu maretAga liMga shUnayx enisikoLuLxtatxde adu niBARva:}
+\ullekha{BAva balidalilx liMgavenisitutx. BAva viBAva\-vAdalilx pASANavenisitutx. BAva niBARvavAdalilx EneMdenisadu noVDA (savasaM. 4; sidadhxrA. 1489-428).}}
+\newmeaning{\ni{viBAvayati iti - viBAvaH; nigaRtaH BAvaH yasAmxtf saH - niBARvaH}}
+\end{entry}
+
+\begin{entry}
 \word{BAva niBARvavaneyudxvudu}
 \src{va}
 \meaning{\arthanonum{nAnu idedxVne, nAnu mADutetxVne, nAnu suKisutitxdedxVne
@@ -2178,7 +2186,7 @@ padAthaR\-gaLu \hbox{eMbudu} modalaneya BAva; jAcnxtaq (tAnu) eMbudu eraDaneya B
 \begin{entry}
 \word{BAvadapUje}
 \src{kA}
-\meaning{\arthanonum{manasisxna BAvadalilx mADuva pUje:}
+\meaning{\arthanonum{BAvanAtamxkavAgi mADuva pUje:}
 \ullekha{aridu BAvada pUjeyaM mADi BakatxnaM harasatutx hasatxmasatxkada saMyoVgadiM karuNagarevuta haruSadiM (pwrxDhakA. 43-94)}}
 \end{entry}
 
@@ -2227,7 +2235,7 @@ kareyabahudu (va.pa.koV. 288-89).}}
 \src{va}
 \meaning{\arthanonum{mAnava deVhavu paMcaBUtagaLiMda racitavAgidudx, parxtiyoMdu
  BUtakUkx obobxbabx adhideVvate athavA nAyakanirutAtxne. A nAyakaru
- namamx deVhada vividha BAgagaLalilx elilxrutAtxreMbudakekx vivara:}}
+ deVhada vividha BAgagaLalilx nelesidAdxre:}}
 \smallskip
 \newmeaning{\arthanonum{\qquad paqthivxVBUtada nAyakanAda barxhamxnu haqdayasAthxnadalilx;
  apftatatxvXda nAyakanAda viSuNxvu kaMThasAthxnadalilx; aginx\-BUtada
@@ -2288,15 +2296,22 @@ lalATadalilx idAdxre:}
 \begin{entry}
 \word{manadaBaMga}
 \src{va}
-\meaning{\arthanonum{Bakatxsathxlada sAdhakanu tAnu hAgU parashivanu BinanxveMdU tapupx tiLidukoMDirutAtxne. avanu aikayxsathxlavanunx \hbox{muTiTxda} naMtara I tapupx tiLivaLike mAyavAgi, tananx manasusx liMga\-diMda parxteyxVkavalalx eMba arivu uMTAgutatxde:}
+\meaning{\arthanonum{tapupx garxhikeya nAsha; Bakatxsathxlada sAdhakanu tAnu hAgU parashivanu BinanxveMdU tapupx tiLidukoMDirutAtxne. avanu aikayxsathxlavanunx \hbox{muTiTxda} naMtara I tapupx tiLivaLikeyu nAshavAguvudu:}
 \ullekha{manada BaMgava aruhina muKadiMde gelide (savasaM. 5; akakxma. 3-2).}}
 \end{entry}
 
 \begin{entry}
-\word{manadaLa viBADa}
+\word{manadaLaviBADa}
 \src{va}
 \meaning{\arthanonum{parashiva manasisxnalilxruva keTaTx yoVcane\-gaLu, Ase\-gaLeMba shaturxgaLanunx nAshamADuvavanu (viBADa); parashiva:}
 \ullekha{elalxra gaMDaMdiru paradaLaviBADaru; enanx gaMDa manadaLaviBADa (savasaM. 5; kadira. 745-231).}}
+\end{entry}
+
+\begin{entry}
+\word{mananemimxda atiR}
+\src{va}
+\meaning{\arthanonum{shivananunx manasusx pUtiRyAgi naMbi, avanige toVrisuva pirxVti nijavAda Bakitx:}
+\ullekha{mananemimxda atiR, Gananemimxda aBAyxsa, eDebiDu\-vilalxda macucx, GanaliMgava kUDuvudoMdaSuTx IshAnayxmUtiR malilxkAjuRnaliMgava kUDuva sucitatxda hotutx (savasaM. 9; shivaleM. 234-81).}}
 \end{entry}
 
 \begin{entry}
@@ -2304,6 +2319,20 @@ lalATadalilx idAdxre:}
 \src{va}
 \meaning{\arthanonum{matayxRloVkadalilx Bakatx mADabeVkAda pUje, varxta, muMtAda AcaraNe:} \ullekha{koTaTx varxtaparxsAda, A parxsAdavenage parxsananx. nimage matayxRda maNiha hiMguvananxkakx enanx varxtadalilx, enanx AcAradalilx, nA hiDida neVmadA BikeSxyalilx, nA tapipxdaDe, tapupx hotatxlilx nimamx keVLidaDe (savasaM. 8; meremiM. 1358-476).}}
 \end{entry}
+
+\begin{entry}
+\word{marahu, marevu}
+\src{va}
+\meaning{\arthanonum{visamxqqti; manuSayxnu modalu parashivana
+ aMga\-vAgidadxnu. saMsAradalilxdAdxgalU avanu tAnu
+ shivAMshikaneMbudanunx tiLiyade, tananx mUlasavxrUpavanunx
+ maretidAdxne. I marevu athavA avideyxyiMdAgi, avanu tananx jiVvanada
+dheyxVyagaLanenxV tapApxgi BAvisikoMDidAdxne; idariMdAgi avanu
+Bavacakarxdalilx sikikxkoMDidAdxne. marevanunx toDedu arivanunx
+paDedare muMcinaMte sAmarasayx paDeyutAtxne:}
+\ullekha{marahu Gana: nimamx neneva mana kiridenanxbahude? bAradayAyx (savasaM. 1; basava. 6-6); a{\ri}va{\ra}tu ma{\ra}vu diTavAdavaraneVneMbe a{\ri}vana{\ri}yade ma{\ra}ha ne\char'273\char'311\ me\char'273\char'311va saMsArigaLaneVneMbe (cananxba. ka. 41-95); marahu baMdihudeMdu guru kuruhane koTaTx, ariviMge pArxNaliMga beVre kANiraNANx (savasaM. 5; akakxma. 331-99); BAva bayaleMdenu noVDA. marahu naSaTxvAyitAtxgi aruhu shUnayxvAyitutx noVDA (savasaM. 11; toVMTasi. 687-306).}}
+\end{entry}
+%aruhu marahu kuruhaLiyitutx, beragAyitutx... (savasaM. 2; alalxma. 604-161); ariviMge idu vidhiye? kUDala\-cenanxsaMgayAyx niV mADida marahu ariviMge idu vidhiye? (savasaM. 3; cenanxba. 1704-628);
 
 \begin{entry}
 \word{mahAliMgada parxsananxtavx}
