work in progress

--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -23257,45 +23257,42 @@ savxyaM caraM paraM ceVti terxYvidhayxM samupAgatamf ||
 \end{shl}
 \medskip
 \pauthor{(sU.A., kirx.pA. 8. 18)}
-
-
-
 \begin{shl}
 Adw navasathxlAniVha BakatxsathxlasamAsharxyAtf |\\[1pt]
 savxyaM paraM caraM ceVti teVSAM lakaSxNamucayxteV ||
 \end{shl}
 \smallskip
 \pauthor{(si.shi., 15. 4, 6)}
-\smallskip
-\begin{shl}
-AcAreV divayxliMgeV nirupamanijaBakatxsathxlAMgeYkayxBAji GArxNAKeyxV citatxhasetxVna ca GanasuKaheVtw kirxyAshakitxyuketxV GArxMtavayxM darxvayxmapayxpaRNaviSayavidhAnoVpadiSaTxM samapayxR pArxyasasxdaBxkitxpUNaR savxyamayamiha gaMdha parxsAdaM
-\end{shl}
-\pauthor{(BajeVta 46)}
-\begin{shl}
-sAvxMgeV mAheVshavxrAtamxnayxnupamasahajajAcnxnashakitxparxyuketxV jihAvx seyxV suparxsidedhxV parataraguruliMgABidheV saMsithxteV\char'263simxnf niSAThxBakitxparxBAvaparxNihitasumahAbudidhxhasetxVna vidAvxnf rasayxM darxvayxM samapayxR savxyamamalarasAKayxM parxsAdaM
-\end{shl}
-\pauthor{(BajeVta 47)}
-\begin{shl}
-yoV\char'263sw nitayxM parxsAdisathxlaparamapadapArxpatxdivAyxMgaBAji sevxVcACxshakitxparxyuketx daqshi jagati muKeV pANinA\char'263haMkaqteVna sAkASxlilxMgeV shivAKeyxV savinaya mavadhAnAtamxtABakitxyukotxV darxSaTxvAyxMshaM samapAyxRpaRNavinihitarUpaparxsAdaM
-\end{shl}
-\pauthor{(BajeVta 48)}
-\begin{shl}
-saMsaketxV pArxNaliMgisathxlanihitanijAMgeV manaHpANinA\char'263sw liMgeV sAkASxcaCxrAKeyxV tavxci jagati muKeV hAyxdishakitxparxyuketxV sapxrXSaTxvayxM cApaRyitAvx savxyamanuBavaBakitxparxBAvoVpapanonxV nitayxM sapxshaRparxsAdaM niratishayasuKaM tatatxvXveVtAtx
-\end{shl}
-\pauthor{(BajeVta 49)}
-\begin{shl}
-liMgeV sAkASxtapxrXsAdeV vimalasharaNasaMjAcnxMgasaMsAthxpiteV\char'263simxnf\\[1pt]
-shorxVtavayxM shorxVtarxvaketxrXV niKilamiha parAshakitxyuketxV samapayxR AnaMdAkAraBakitx suPxTataraparamajAcnxnahasetxVna soV\char'263yaM shabAdxKayxM tatapxrXsAdaM savxyamaviratamatAyxsharxmasothxV
-\end{shl}
-\pauthor{(BajeVta 50)}
-\begin{shl}
-aikAyxMgaM BAji liMgeV mahati haqdimuKeV cinamxhAshakitxyuketxV nitayxM BAveVna hasetxVna ca samarasaBakitxparxsakatxH savxyaM sanf samxtaRvayxM cApaRyitAvx vishadamatiravashayxM sadeYvApaRNiVyaM tasAmxlalxbadhxM vishudadhxM GanatarapariNAmaparxsAdaM BajeVta
-\end{shl}
-\pauthor{(BajeVta 51)}
-\begin{shl}
-aMgaM ca liMgaM ca muKaM ca hasotxV Bakitxshacx shakitxshacx tathArapxNaM ca parxsAda itayxSaTxvidhasathxlAni parxtisathxlaM SaTfsathxlasaMjicnxtAni 
-\end{shl}
-\pauthor{(BajeVta 52)}
+%\smallskip
+%\begin{shl}
+%AcAreV divayxliMgeV nirupamanijaBakatxsathxlAMgeYkayxBAji GArxNAKeyxV citatxhasetxVna ca GanasuKaheVtw kirxyAshakitxyuketxV GArxMtavayxM darxvayxmapayxpaRNaviSayavidhAnoVpadiSaTxM samapayxR pArxyasasxdaBxkitxpUNaR savxyamayamiha gaMdha parxsAdaM
+%\end{shl}
+%\pauthor{(BajeVta 46)}
+%\begin{shl}
+%sAvxMgeV mAheVshavxrAtamxnayxnupamasahajajAcnxnashakitxparxyuketxV jihAvx seyxV suparxsidedhxV parataraguruliMgABidheV saMsithxteV\char'263simxnf niSAThxBakitxparxBAvaparxNihitasumahAbudidhxhasetxVna vidAvxnf rasayxM darxvayxM samapayxR savxyamamalarasAKayxM parxsAdaM
+%\end{shl}
+%\pauthor{(BajeVta 47)}
+%\begin{shl}
+%yoV\char'263sw nitayxM parxsAdisathxlaparamapadapArxpatxdivAyxMgaBAji sevxVcACxshakitxparxyuketx daqshi jagati muKeV pANinA\char'263haMkaqteVna sAkASxlilxMgeV shivAKeyxV savinaya mavadhAnAtamxtABakitxyukotxV darxSaTxvAyxMshaM samapAyxRpaRNavinihitarUpaparxsAdaM
+%\end{shl}
+%\pauthor{(BajeVta 48)}
+%\begin{shl}
+%saMsaketxV pArxNaliMgisathxlanihitanijAMgeV manaHpANinA\char'263sw liMgeV sAkASxcaCxrAKeyxV tavxci jagati muKeV hAyxdishakitxparxyuketxV sapxrXSaTxvayxM cApaRyitAvx savxyamanuBavaBakitxparxBAvoVpapanonxV nitayxM sapxshaRparxsAdaM niratishayasuKaM tatatxvXveVtAtx
+%\end{shl}
+%\pauthor{(BajeVta 49)}
+%\begin{shl}
+%liMgeV sAkASxtapxrXsAdeV vimalasharaNasaMjAcnxMgasaMsAthxpiteV\char'263simxnf\\[1pt]
+%shorxVtavayxM shorxVtarxvaketxrXV niKilamiha parAshakitxyuketxV samapayxR AnaMdAkAraBakitx suPxTataraparamajAcnxnahasetxVna soV\char'263yaM shabAdxKayxM tatapxrXsAdaM savxyamaviratamatAyxsharxmasothxV
+%\end{shl}
+%\pauthor{(BajeVta 50)}
+%\begin{shl}
+%aikAyxMgaM BAji liMgeV mahati haqdimuKeV cinamxhAshakitxyuketxV nitayxM BAveVna hasetxVna ca samarasaBakitxparxsakatxH savxyaM sanf samxtaRvayxM cApaRyitAvx vishadamatiravashayxM sadeYvApaRNiVyaM tasAmxlalxbadhxM vishudadhxM GanatarapariNAmaparxsAdaM BajeVta
+%\end{shl}
+%\pauthor{(BajeVta 51)}
+%\begin{shl}
+%aMgaM ca liMgaM ca muKaM ca hasotxV Bakitxshacx shakitxshacx tathArapxNaM ca parxsAda itayxSaTxvidhasathxlAni parxtisathxlaM SaTfsathxlasaMjicnxtAni 
+%\end{shl}
+%\pauthor{(BajeVta 52)}
 \smallskip
 \newmeaning{\artha{parashivana tatupxruSamuKasavxrUpada liMga:}}
 \smallskip
